--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" /> <!-- Zeichenformat setzen -->
     <title>Startseite | VS-Projekt</title> <!-- Fenstername setzten -->
 	<link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-    <link href="website.css" rel="stylesheet" /> <!-- Verweis auf .CSS -->
+    <link href="style.css" rel="stylesheet" /> <!-- Verweis auf .CSS -->
   </head>
 
 	<!-- body: inhalt der Seite -->
@@ -14,38 +14,35 @@
         <h3 id="startseite">Startseite</h3> <!-- später: ein link zur Startseite, jetzt: gewöhnt User an position des späteren Buttons -->
 		
 		<!-- laden der bilddateien + höhen deklarierung, konnte nicht in .css geklärt werden, da jedes unterschiedlich hoch stehen sein soll -->
-		<img src="assets/Avengers_Cover.jpg" alt="Marvel's The Avengers" style="top: 50px">
-		<img src="assets/Avengers2_Cover.jpg" alt="Marvel's The Avengers: Age of Ultron" style="top: 285px">
-		<img src="assets/Avengers3_Cover.jpg" alt="Marvel's The Avengers: Infinity War" style="top: 520px">
-		<img src="assets/Avengers4_Cover.jpg" alt="Marvel's The Avengers: Endgame" style="top: 755px">
+		<img src="assets/Avengers_Cover.jpg" alt="Marvel's The Avengers" id="covers" style="top: 50px">
+		<img src="assets/Avengers2_Cover.jpg" alt="Marvel's The Avengers: Age of Ultron" id="covers"  style="top: 285px">
+		<img src="assets/Avengers3_Cover.jpg" alt="Marvel's The Avengers: Infinity War" id="covers"  style="top: 520px">
+		<img src="assets/Avengers4_Cover.jpg" alt="Marvel's The Avengers: Endgame" id="covers"  style="top: 755px">
 		
-
+		<!-- Vorstellungstermine, 4 pro Film -->
 		<div class="vorstellung">
-			<p id="tvorstellung" style="left: 0px;"> 14:00 </p>
-			<p id="tvorstellung" style="left: 200px;"> 16:00 </p>
-			<p id="tvorstellung" style="left: 400px;"> 18:00 </p>
-			<p id="tvorstellung" style="left: 600px;"> 20:00 </p>
+			<a href="platzreservierung.html"><p id="tvorstellung" style="left: 0px;"> 14:00 </p></a>
+			<a href="platzreservierung.html"><p id="tvorstellung" style="left: 200px;"> 16:00 </p></a>
+			<a href="platzreservierung.html"><p id="tvorstellung" style="left: 400px;"> 18:00 </p></a>
+			<a href="platzreservierung.html"><p id="tvorstellung" style="left: 600px;"> 20:00 </p></a>
 		</div>
-		
 		<div class="vorstellung">
-			<p id="tvorstellung" style="left: 0px;"> 14:00 </p>
-			<p id="tvorstellung" style="left: 200px;"> 16:00 </p>
-			<p id="tvorstellung" style="left: 400px;"> 18:00 </p>
-			<p id="tvorstellung" style="left: 600px;"> 20:00 </p>
+			<a href="platzreservierung.html"><p id="tvorstellung" style="left: 0px;"> 14:00 </p></a>
+			<a href="platzreservierung.html"><p id="tvorstellung" style="left: 200px;"> 16:00 </p></a>
+			<a href="platzreservierung.html"><p id="tvorstellung" style="left: 400px;"> 18:00 </p></a>
+			<a href="platzreservierung.html"><p id="tvorstellung" style="left: 600px;"> 20:00 </p></a>
 		</div>
-	
 		<div class="vorstellung">
-			<p id="tvorstellung" style="left: 0px;"> 14:00 </p>
-			<p id="tvorstellung" style="left: 200px;"> 16:00 </p>
-			<p id="tvorstellung" style="left: 400px;"> 18:00 </p>
-			<p id="tvorstellung" style="left: 600px;"> 20:00 </p>
+			<a href="platzreservierung.html"><p id="tvorstellung" style="left: 0px;"> 14:00 </p></a>
+			<a href="platzreservierung.html"><p id="tvorstellung" style="left: 200px;"> 16:00 </p></a>
+			<a href="platzreservierung.html"><p id="tvorstellung" style="left: 400px;"> 18:00 </p></a>
+			<a href="platzreservierung.html"><p id="tvorstellung" style="left: 600px;"> 20:00 </p></a>
 		</div>
-		
 		<div class="vorstellung">
-			<p id="tvorstellung" style="left: 0px;"> 14:00 </p>
-			<p id="tvorstellung" style="left: 200px;"> 16:00 </p>
-			<p id="tvorstellung" style="left: 400px;"> 18:00 </p>
-			<p id="tvorstellung" style="left: 600px;"> 20:00 </p>
+			<a href="platzreservierung.html"><p id="tvorstellung" style="left: 0px;"> 14:00 </p></a>
+			<a href="platzreservierung.html"><p id="tvorstellung" style="left: 200px;"> 16:00 </p></a>
+			<a href="platzreservierung.html"><p id="tvorstellung" style="left: 400px;"> 18:00 </p></a>
+			<a href="platzreservierung.html"><p id="tvorstellung" style="left: 600px;"> 20:00 </p></a>
 		</div>
 		
   </body>
